--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   </style>
 </head>
 <body>
-  <iframe src="Documents.pdf" title="PDF Fullscreen"></iframe>
+  <iframe src="Document.pdf" title="PDF Fullscreen"></iframe>
 </body>
 </html>
